Fix comment spacing issue on index page

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -105,6 +105,9 @@ input {
 .comments {
   padding: 20px;
 }
+.new-comment {
+  padding: 20px;
+}
 
 .comment {
   font-size: 16px;
